--- a/onetest.conf
+++ b/onetest.conf
@@ -2,7 +2,7 @@
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com, seed-sequoia.siri.apple.com, sequoia.apple.com, app.yinxiang.com, cable.auth.com, *.id.ui.direct, www.baidu.com, yunbusiness.ccb.com, wxh.wo.cn, gate.lagou.com, www.abchina.com.cn, mbank.psbc.com, ibfp.psbc.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-# dns 最好使用 https
+# dns 最好使用国内公共 Doh 
 dns-server = system
 ipv6 = false
 prefer-ipv6 = false
@@ -27,365 +27,17 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Weibo/Weibo.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Zhihu/Zhihu.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoHongShu/XiaoHongShu.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Sony/Sony.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Nintendo/Nintendo.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Epic/Epic.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/SteamCN/SteamCN.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Steam/Steam.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,DIRECT
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China_Domain.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,DIRECT
-DOMAIN-SUFFIX,touker.com,DIRECT
-DOMAIN-SUFFIX,zhangle.com,DIRECT
-DOMAIN-SUFFIX,qlogo.cn,DIRECT
-DOMAIN-SUFFIX,baidu.com,DIRECT
-DOMAIN-SUFFIX,baidubcr.com,DIRECT
-DOMAIN-SUFFIX,bdstatic.com,DIRECT
-DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
-DOMAIN-SUFFIX,taobao.com,DIRECT
-DOMAIN-SUFFIX,alicdn.com,DIRECT
-DOMAIN,blzddist1-a.akamaihd.net,DIRECT
-DOMAIN,cdn.angruo.com,DIRECT
-DOMAIN,download.jetbrains.com,DIRECT
-DOMAIN,file-igamecj.akamaized.net,DIRECT
-DOMAIN,images-cn.ssl-images-amazon.com,DIRECT
-DOMAIN,officecdn-microsoft-com.akamaized.net,DIRECT
-DOMAIN,speedtest.macpaw.com,DIRECT
-DOMAIN-SUFFIX,126.net,DIRECT
-DOMAIN-SUFFIX,127.net,DIRECT
-DOMAIN-SUFFIX,163.com,DIRECT
-DOMAIN-SUFFIX,163yun.com,DIRECT
-DOMAIN-SUFFIX,21cn.com,DIRECT
-DOMAIN-SUFFIX,343480.com,DIRECT
-DOMAIN-SUFFIX,360buyimg.com,DIRECT
-DOMAIN-SUFFIX,360in.com,DIRECT
-DOMAIN-SUFFIX,51ym.me,DIRECT
-DOMAIN-SUFFIX,71.am.com,DIRECT
-DOMAIN-SUFFIX,8686c.com,DIRECT
-DOMAIN-SUFFIX,abchina.com,DIRECT
-DOMAIN-SUFFIX,accuweather.com,DIRECT
-DOMAIN-SUFFIX,acgvideo.com,DIRECT
-DOMAIN-SUFFIX,acm.org,DIRECT
-DOMAIN-SUFFIX,acs.org,DIRECT
-DOMAIN-SUFFIX,aicoinstorge.com,DIRECT
-DOMAIN-SUFFIX,aip.org,DIRECT
-DOMAIN-SUFFIX,air-matters.com,DIRECT
-DOMAIN-SUFFIX,air-matters.io,DIRECT
-DOMAIN-SUFFIX,aixifan.com,DIRECT
-DOMAIN-SUFFIX,akadns.net,DIRECT
-DOMAIN-SUFFIX,alibaba.com,DIRECT
-DOMAIN-SUFFIX,alikunlun.com,DIRECT
-DOMAIN-SUFFIX,alipay.com,DIRECT
-DOMAIN-SUFFIX,amap.com,DIRECT
-DOMAIN-SUFFIX,amd.com,DIRECT
-DOMAIN-SUFFIX,ams.org,DIRECT
-DOMAIN-SUFFIX,animebytes.tv,DIRECT
-DOMAIN-SUFFIX,annualreviews.org,DIRECT
-DOMAIN-SUFFIX,aps.org,DIRECT
-DOMAIN-SUFFIX,ascelibrary.org,DIRECT
-DOMAIN-SUFFIX,asm.org,DIRECT
-DOMAIN-SUFFIX,asme.org,DIRECT
-DOMAIN-SUFFIX,astm.org,DIRECT
-DOMAIN-SUFFIX,autonavi.com,DIRECT
-DOMAIN-SUFFIX,awesome-hd.me,DIRECT
-DOMAIN-SUFFIX,b612.net,DIRECT
-DOMAIN-SUFFIX,baduziyuan.com,DIRECT
-DOMAIN-SUFFIX,battle.net,DIRECT
-DOMAIN-SUFFIX,bdatu.com,DIRECT
-DOMAIN-SUFFIX,beitaichufang.com,DIRECT
-DOMAIN-SUFFIX,biliapi.com,DIRECT
-DOMAIN-SUFFIX,biliapi.net,DIRECT
-DOMAIN-SUFFIX,bilibili.com,DIRECT
-DOMAIN-SUFFIX,bilibili.tv,DIRECT
-DOMAIN-SUFFIX,bjango.com,DIRECT
-DOMAIN-SUFFIX,blizzard.com,DIRECT
-DOMAIN-SUFFIX,bmj.com,DIRECT
-DOMAIN-SUFFIX,booking.com,DIRECT
-DOMAIN-SUFFIX,broadcasthe.net,DIRECT
-DOMAIN-SUFFIX,bstatic.com,DIRECT
-DOMAIN-SUFFIX,cailianpress.com,DIRECT
-DOMAIN-SUFFIX,cambridge.org,DIRECT
-DOMAIN-SUFFIX,camera360.com,DIRECT
-DOMAIN-SUFFIX,cas.org,DIRECT
-DOMAIN-SUFFIX,ccgslb.com,DIRECT
-DOMAIN-SUFFIX,ccgslb.net,DIRECT
-DOMAIN-SUFFIX,cctv.com,DIRECT
-DOMAIN-SUFFIX,cctvpic.com,DIRECT
-DOMAIN-SUFFIX,chdbits.co,DIRECT
-DOMAIN-SUFFIX,chinanetcenter.com,DIRECT
-DOMAIN-SUFFIX,chinaso.com,DIRECT
-DOMAIN-SUFFIX,chua.pro,DIRECT
-DOMAIN-SUFFIX,chuimg.com,DIRECT
-DOMAIN-SUFFIX,chunyu.mobi,DIRECT
-DOMAIN-SUFFIX,chushou.tv,DIRECT
-DOMAIN-SUFFIX,clarivate.com,DIRECT
-DOMAIN-SUFFIX,classix-unlimited.co.uk,DIRECT
-DOMAIN-SUFFIX,cmbchina.com,DIRECT
-DOMAIN-SUFFIX,cmbimg.com,DIRECT
-DOMAIN-SUFFIX,cn,DIRECT
-DOMAIN-SUFFIX,com-hs-hkdy.com,DIRECT
-DOMAIN-SUFFIX,ctrip.com,DIRECT
-DOMAIN-SUFFIX,czybjz.com,DIRECT
-DOMAIN-SUFFIX,dandanzan.com,DIRECT
-DOMAIN-SUFFIX,dfcfw.com,DIRECT
-DOMAIN-SUFFIX,didialift.com,DIRECT
-DOMAIN-SUFFIX,didiglobal.com,DIRECT
-DOMAIN-SUFFIX,dingtalk.com,DIRECT
-DOMAIN-SUFFIX,docschina.org,DIRECT
-DOMAIN-SUFFIX,douban.com,DIRECT
-DOMAIN-SUFFIX,doubanio.com,DIRECT
-DOMAIN-SUFFIX,douyu.com,DIRECT
-DOMAIN-SUFFIX,duokan.com,DIRECT
-DOMAIN-SUFFIX,dxycdn.com,DIRECT
-DOMAIN-SUFFIX,dytt8.net,DIRECT
-DOMAIN-SUFFIX,eastmoney.com,DIRECT
-DOMAIN-SUFFIX,ebscohost.com,DIRECT
-DOMAIN-SUFFIX,emerald.com,DIRECT
-DOMAIN-SUFFIX,empornium.me,DIRECT
-DOMAIN-SUFFIX,engineeringvillage.com,DIRECT
-DOMAIN-SUFFIX,eudic.net,DIRECT
-DOMAIN-SUFFIX,feiliao.com,DIRECT
-DOMAIN-SUFFIX,feng.com,DIRECT
-DOMAIN-SUFFIX,fengkongcloud.com,DIRECT
-DOMAIN-SUFFIX,fjhps.com,DIRECT
-DOMAIN-SUFFIX,frdic.com,DIRECT
-DOMAIN-SUFFIX,futu5.com,DIRECT
-DOMAIN-SUFFIX,futunn.com,DIRECT
-DOMAIN-SUFFIX,gandi.net,DIRECT
-DOMAIN-SUFFIX,gazellegames.net,DIRECT
-DOMAIN-SUFFIX,geilicdn.com,DIRECT
-DOMAIN-SUFFIX,getpricetag.com,DIRECT
-DOMAIN-SUFFIX,gifshow.com,DIRECT
-DOMAIN-SUFFIX,godic.net,DIRECT
-DOMAIN-SUFFIX,gtimg.com,DIRECT
-DOMAIN-SUFFIX,hdbits.org,DIRECT
-DOMAIN-SUFFIX,hdchina.org,DIRECT
-DOMAIN-SUFFIX,hdhome.org,DIRECT
-DOMAIN-SUFFIX,hdsky.me,DIRECT
-DOMAIN-SUFFIX,hdslb.com,DIRECT
-DOMAIN-SUFFIX,hicloud.com,DIRECT
-DOMAIN-SUFFIX,hitv.com,DIRECT
-DOMAIN-SUFFIX,hongxiu.com,DIRECT
-DOMAIN-SUFFIX,hostbuf.com,DIRECT
-DOMAIN-SUFFIX,huxiucdn.com,DIRECT
-DOMAIN-SUFFIX,huya.com,DIRECT
-DOMAIN-SUFFIX,icetorrent.org,DIRECT
-DOMAIN-SUFFIX,icevirtuallibrary.com,DIRECT
-DOMAIN-SUFFIX,iciba.com,DIRECT
-DOMAIN-SUFFIX,idqqimg.com,DIRECT
-DOMAIN-SUFFIX,ieee.org,DIRECT
-DOMAIN-SUFFIX,iesdouyin.com,DIRECT
-DOMAIN-SUFFIX,igamecj.com,DIRECT
-DOMAIN-SUFFIX,imf.org,DIRECT
-DOMAIN-SUFFIX,infinitynewtab.com,DIRECT
-DOMAIN-SUFFIX,iop.org,DIRECT
-DOMAIN-SUFFIX,ip-cdn.com,DIRECT
-DOMAIN-SUFFIX,ip.la,DIRECT
-DOMAIN-SUFFIX,ipip.net,DIRECT
-DOMAIN-SUFFIX,ipv6-test.com,DIRECT
-DOMAIN-SUFFIX,iqiyi.com,DIRECT
-DOMAIN-SUFFIX,iqiyipic.com,DIRECT
-DOMAIN-SUFFIX,ithome.com,DIRECT
-DOMAIN-SUFFIX,jamanetwork.com,DIRECT
-DOMAIN-SUFFIX,java.com,DIRECT
-DOMAIN-SUFFIX,jd.com,DIRECT
-DOMAIN-SUFFIX,jd.hk,DIRECT
-DOMAIN-SUFFIX,jdpay.com,DIRECT
-DOMAIN-SUFFIX,jhu.edu,DIRECT
-DOMAIN-SUFFIX,jidian.im,DIRECT
-DOMAIN-SUFFIX,jpopsuki.eu,DIRECT
-DOMAIN-SUFFIX,jstor.org,DIRECT
-DOMAIN-SUFFIX,jstucdn.com,DIRECT
-DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
-DOMAIN-SUFFIX,karger.com,DIRECT
-DOMAIN-SUFFIX,kaspersky-labs.com,DIRECT
-DOMAIN-SUFFIX,keepcdn.com,DIRECT
-DOMAIN-SUFFIX,keepfrds.com,DIRECT
-DOMAIN-SUFFIX,kkmh.com,DIRECT
-DOMAIN-SUFFIX,ksosoft.com,DIRECT
-DOMAIN-SUFFIX,kuyunbo.club,DIRECT
-DOMAIN-SUFFIX,libguides.com,DIRECT
-DOMAIN-SUFFIX,livechina.com,DIRECT
-DOMAIN-SUFFIX,lofter.com,DIRECT
-DOMAIN-SUFFIX,loli.net,DIRECT
-DOMAIN-SUFFIX,luojilab.com,DIRECT
-DOMAIN-SUFFIX,m-team.cc,DIRECT
-DOMAIN-SUFFIX,madsrevolution.net,DIRECT
-DOMAIN-SUFFIX,maoyan.com,DIRECT
-DOMAIN-SUFFIX,maoyun.tv,DIRECT
-DOMAIN-SUFFIX,meipai.com,DIRECT
-DOMAIN-SUFFIX,meitu.com,DIRECT
-DOMAIN-SUFFIX,meituan.com,DIRECT
-DOMAIN-SUFFIX,meituan.net,DIRECT
-DOMAIN-SUFFIX,meitudata.com,DIRECT
-DOMAIN-SUFFIX,meitustat.com,DIRECT
-DOMAIN-SUFFIX,meixincdn.com,DIRECT
-DOMAIN-SUFFIX,mgtv.com,DIRECT
-DOMAIN-SUFFIX,mi-img.com,DIRECT
-DOMAIN-SUFFIX,microsoft.com,DIRECT
-DOMAIN-SUFFIX,miui.com,DIRECT
-DOMAIN-SUFFIX,miwifi.com,DIRECT
-DOMAIN-SUFFIX,mobike.com,DIRECT
-DOMAIN-SUFFIX,moke.com,DIRECT
-DOMAIN-SUFFIX,morethan.tv,DIRECT
-DOMAIN-SUFFIX,mpg.de,DIRECT
-DOMAIN-SUFFIX,msecnd.net,DIRECT
-DOMAIN-SUFFIX,mubu.com,DIRECT
-DOMAIN-SUFFIX,mxhichina.com,DIRECT
-DOMAIN-SUFFIX,myanonamouse.net,DIRECT
-DOMAIN-SUFFIX,myapp.com,DIRECT
-DOMAIN-SUFFIX,myilibrary.com,DIRECT
-DOMAIN-SUFFIX,myqcloud.com,DIRECT
-DOMAIN-SUFFIX,myzaker.com,DIRECT
-DOMAIN-SUFFIX,nanyangpt.com,DIRECT
-DOMAIN-SUFFIX,nature.com,DIRECT
-DOMAIN-SUFFIX,ncore.cc,DIRECT
-DOMAIN-SUFFIX,netease.com,DIRECT
-DOMAIN-SUFFIX,netspeedtestmaster.com,DIRECT
-DOMAIN-SUFFIX,nim-lang-cn.org,DIRECT
-DOMAIN-SUFFIX,nvidia.com,DIRECT
-DOMAIN-SUFFIX,oecd-ilibrary.org,DIRECT
-DOMAIN-SUFFIX,office365.com,DIRECT
-DOMAIN-SUFFIX,open.cd,DIRECT
-DOMAIN-SUFFIX,oracle.com,DIRECT
-DOMAIN-SUFFIX,osapublishing.org,DIRECT
-DOMAIN-SUFFIX,oup.com,DIRECT
-DOMAIN-SUFFIX,ourbits.club,DIRECT
-DOMAIN-SUFFIX,ourdvs.com,DIRECT
-DOMAIN-SUFFIX,outlook.com,DIRECT
-DOMAIN-SUFFIX,ovid.com,DIRECT
-DOMAIN-SUFFIX,oxfordartonline.com,DIRECT
-DOMAIN-SUFFIX,oxfordbibliographies.com,DIRECT
-DOMAIN-SUFFIX,oxfordmusiconline.com,DIRECT
-DOMAIN-SUFFIX,passthepopcorn.me,DIRECT
-DOMAIN-SUFFIX,paypal.com,DIRECT
-DOMAIN-SUFFIX,paypalobjects.com,DIRECT
-DOMAIN-SUFFIX,pnas.org,DIRECT
-DOMAIN-SUFFIX,privatehd.to,DIRECT
-DOMAIN-SUFFIX,proquest.com,DIRECT
-DOMAIN-SUFFIX,pstatp.com,DIRECT
-DOMAIN-SUFFIX,pterclub.com,DIRECT
-DOMAIN-SUFFIX,qdaily.com,DIRECT
-DOMAIN-SUFFIX,qhimg.com,DIRECT
-DOMAIN-SUFFIX,qhres.com,DIRECT
-DOMAIN-SUFFIX,qidian.com,DIRECT
-DOMAIN-SUFFIX,qq.com,DIRECT
-DOMAIN-SUFFIX,wechat.com,DIRECT
-DOMAIN-SUFFIX,dns.pub,DIRECT
-DOMAIN-SUFFIX,doh.pub,DIRECT
-DOMAIN-SUFFIX,qyer.com,DIRECT
-DOMAIN-SUFFIX,qyerstatic.com,DIRECT
-DOMAIN-SUFFIX,raychase.net,DIRECT
-DOMAIN-SUFFIX,redacted.ch,DIRECT
-DOMAIN-SUFFIX,ronghub.com,DIRECT
-DOMAIN-SUFFIX,rsc.org,DIRECT
-DOMAIN-SUFFIX,ruguoapp.com,DIRECT
-DOMAIN-SUFFIX,s-microsoft.com,DIRECT
-DOMAIN-SUFFIX,s-reader.com,DIRECT
-DOMAIN-SUFFIX,sagepub.com,DIRECT
-DOMAIN-SUFFIX,sankuai.com,DIRECT
-DOMAIN-SUFFIX,sciencedirect.com,DIRECT
-DOMAIN-SUFFIX,sciencemag.org,DIRECT
-DOMAIN-SUFFIX,scomper.me,DIRECT
-DOMAIN-SUFFIX,scopus.com,DIRECT
-DOMAIN-SUFFIX,seafile.com,DIRECT
-DOMAIN-SUFFIX,servicewechat.com,DIRECT
-DOMAIN-SUFFIX,siam.org,DIRECT
-DOMAIN-SUFFIX,sina.com,DIRECT
-DOMAIN-SUFFIX,sm.ms,DIRECT
-DOMAIN-SUFFIX,smzdm.com,DIRECT
-DOMAIN-SUFFIX,snapdrop.net,DIRECT
-DOMAIN-SUFFIX,snssdk.com,DIRECT
-DOMAIN-SUFFIX,snwx.com,DIRECT
-DOMAIN-SUFFIX,sogo.com,DIRECT
-DOMAIN-SUFFIX,sogou.com,DIRECT
-DOMAIN-SUFFIX,sogoucdn.com,DIRECT
-DOMAIN-SUFFIX,sohu-inc.com,DIRECT
-DOMAIN-SUFFIX,sohu.com,DIRECT
-DOMAIN-SUFFIX,sohucs.com,DIRECT
-DOMAIN-SUFFIX,soku.com,DIRECT
-DOMAIN-SUFFIX,spiedigitallibrary.org,DIRECT
-DOMAIN-SUFFIX,springer.com,DIRECT
-DOMAIN-SUFFIX,springerlink.com,DIRECT
-DOMAIN-SUFFIX,springsunday.net,DIRECT
-DOMAIN-SUFFIX,sspai.com,DIRECT
-DOMAIN-SUFFIX,staticdn.net,DIRECT
-DOMAIN-SUFFIX,steam-chat.com,DIRECT
-DOMAIN-SUFFIX,steamcdn-a.akamaihd.net,DIRECT
-DOMAIN-SUFFIX,steamcontent.com,DIRECT
-DOMAIN-SUFFIX,steamgames.com,DIRECT
-DOMAIN-SUFFIX,steampowered.com,DIRECT
-DOMAIN-SUFFIX,steamstat.us,DIRECT
-DOMAIN-SUFFIX,steamstatic.com,DIRECT
-DOMAIN-SUFFIX,steamusercontent.com,DIRECT
-DOMAIN-SUFFIX,takungpao.com,DIRECT
-DOMAIN-SUFFIX,tandfonline.com,DIRECT
-DOMAIN-SUFFIX,teamviewer.com,DIRECT
-DOMAIN-SUFFIX,tencent-cloud.net,DIRECT
-DOMAIN-SUFFIX,tencent.com,DIRECT
-DOMAIN-SUFFIX,tenpay.com,DIRECT
-DOMAIN-SUFFIX,test-ipv6.com,DIRECT
-DOMAIN-SUFFIX,tianyancha.com,DIRECT
-DOMAIN-SUFFIX,tjupt.org,DIRECT
-DOMAIN-SUFFIX,tmall.com,DIRECT
-DOMAIN-SUFFIX,tmall.hk,DIRECT
-DOMAIN-SUFFIX,totheglory.im,DIRECT
-DOMAIN-SUFFIX,toutiao.com,DIRECT
-DOMAIN-SUFFIX,udache.com,DIRECT
-DOMAIN-SUFFIX,udacity.com,DIRECT
-DOMAIN-SUFFIX,un.org,DIRECT
-DOMAIN-SUFFIX,uni-bielefeld.de,DIRECT
-DOMAIN-SUFFIX,uning.com,DIRECT
-DOMAIN-SUFFIX,v-56.com,DIRECT
-DOMAIN-SUFFIX,visualstudio.com,DIRECT
-DOMAIN-SUFFIX,vmware.com,DIRECT
-DOMAIN-SUFFIX,wangsu.com,DIRECT
-DOMAIN-SUFFIX,weather.com,DIRECT
-DOMAIN-SUFFIX,webofknowledge.com,DIRECT
-DOMAIN-SUFFIX,wechat.com,DIRECT
-DOMAIN-SUFFIX,weibo.com,DIRECT
-DOMAIN-SUFFIX,weibocdn.com,DIRECT
-DOMAIN-SUFFIX,weico.cc,DIRECT
-DOMAIN-SUFFIX,weidian.com,DIRECT
-DOMAIN-SUFFIX,westlaw.com,DIRECT
-DOMAIN-SUFFIX,whatismyip.com,DIRECT
-DOMAIN-SUFFIX,wiley.com,DIRECT
-DOMAIN-SUFFIX,windows.com,DIRECT
-DOMAIN-SUFFIX,windowsupdate.com,DIRECT
-DOMAIN-SUFFIX,worldbank.org,DIRECT
-DOMAIN-SUFFIX,worldscientific.com,DIRECT
-DOMAIN-SUFFIX,xiachufang.com,DIRECT
-DOMAIN-SUFFIX,xiami.com,DIRECT
-DOMAIN-SUFFIX,xiami.net,DIRECT
-DOMAIN-SUFFIX,xiaomi.com,DIRECT
-DOMAIN-SUFFIX,ximalaya.com,DIRECT
-DOMAIN-SUFFIX,xinhuanet.com,DIRECT
-DOMAIN-SUFFIX,xmcdn.com,DIRECT
-DOMAIN-SUFFIX,yangkeduo.com,DIRECT
-DOMAIN-SUFFIX,ydstatic.com,DIRECT
-DOMAIN-SUFFIX,youku.com,DIRECT
-DOMAIN-SUFFIX,zhangzishi.cc,DIRECT
-DOMAIN-SUFFIX,zhihu.com,DIRECT
-DOMAIN-SUFFIX,zhimg.com,DIRECT
-DOMAIN-SUFFIX,zhuihd.com,DIRECT
-DOMAIN-SUFFIX,zimuzu.io,DIRECT
-DOMAIN-SUFFIX,zimuzu.tv,DIRECT
-DOMAIN-SUFFIX,zmz2019.com,DIRECT
-DOMAIN-SUFFIX,zmzapi.com,DIRECT
-DOMAIN-SUFFIX,zmzapi.net,DIRECT
-DOMAIN-SUFFIX,zmzfile.com,DIRECT
-DOMAIN-SUFFIX,google.cn,DIRECT
-DOMAIN-SUFFIX,manmanbuy.com,DIRECT
-DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
-DOMAIN-SUFFIX,aaplimg.com,DIRECT
-DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
-DOMAIN-SUFFIX,apple.co,DIRECT
-DOMAIN-SUFFIX,apple.news,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
-DOMAIN-SUFFIX,apple.com.cn,DIRECT
-DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-DOMAIN-SUFFIX,crashlytics.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,icloud.com.cn,DIRECT
-DOMAIN-SUFFIX,me.com,DIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
+
 DOMAIN-SUFFIX,scdn.co,PROXY
 DOMAIN-SUFFIX,line.naver.jp,PROXY
 DOMAIN-SUFFIX,line.me,PROXY
@@ -637,9 +289,8 @@ amplifi.lan = server:system
 ^http://(www.)?google.com.hk https://www.google.com 302
 
 [Script]
-盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=120
-iOS15美标空气质量 = type=http-response,script-path=iOS15_Weather_AQI_US.js,pattern=https://weather-data.apple.com/v2/weather/[\w-]+/-?[0-9]+\.[0-9]+/-?[0-9]+\.[0-9]+\?,requires-body=true,timeout=10,enable=true
-
+# Boxjs官方已经开始推荐模块安装方式，配置 > 模块 > 右上角加号
+# 模块地址, https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.surge.sgmodule
 #[MITM]
 #enable = true
 #hostname = %APPEND% wq.jd.com, me-api.jd.com, trade-acs.m.taobao.com, api.m.jd.com, clientaccess.10086.cn, *.bilibili.com, music.163.com, draw.jdfcloud.com, jdjoy.jd.com, ios.baertt.com, app.kxp.com, wq.jd.com, act.10010.com, m.client.10010.com, ifac*.iqiyi.com, nebula.kuaishou.com, mp.weixin.qq.com, ms.jr.jd.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, ios.prod.ftl.netflix.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, acs.m.taobao.com, m*.amap.com, api-new.app.acfun.cn, api.bjxkhc.com, *.amemv.com, *.snssdk.com, issuecdn.baidupcs.com, pan.baidu.com, newclient.map.baidu.com, mime.baidu.com, act.vip.iqiyi.com, app.bilibili.com, manga.bilibili.com, channel.beitaichufang.com, iapi.bishijie.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, cloud.189.cn, api.chelaile.net.cn, web.chelaile.net.cn, cap.caocaokeji.cn, api.caijingmobile.com, gw.csdn.net, m.ctrip.com, app.poizon.com, api.douban.com, rtbapi.douyucdn.cn, e.dangdang.com, daoyu.sdo.com, *.daydaycook.com, maicai.api.ddxq.mobi, mobile-api2011.elong.com, 123.59.31.1, 119.18.193.135, cube.elemecdn.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, api.feng.com, *-release.wuta-cam.com, www.youtube.com, s.youtube.com, gateway.shouqiev.com, dl.app.gtja.com, prom.mobile.gome.com.cn, smkmp.96225.com, api.huomao.com, imeclient.openspeech.cn, api.intsig.net, ih2.ireader.com, nnapp.cloudbae.cn:0, ib-soft.net, www.inoreader.com, img*.360buyimg.com, api.jxedt.com, richmanapi.jxedt.com, *.kakamobi.cn, app-api.jinse.com, ios.wps.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, 122.14.246.33, 175.102.178.52, api.club.lenovo.cn, api.jr.mi.com, api-mifit*.huami.com, api.mgzf.com, cdn.moji.com, img.meituan.net, p*.meituan.net, s3plus.meituan.net, flowplus.meituan.net, capi.mwee.cn, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, c.m.163.com, client.mail.163.com, interface*.music.163.com, 59.111.181.*, sp.kaola.com, support.you.163.com, p.du.163.com, app-api.niu.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, mage.if.qidian.com, msspjh.emarbox.com, api.rr.tv, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, consumer.fcbox.com, g.cdn.pengpengla.com, snailsleep.net, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, m.tuniu.com, mob.mddcloud.com, img*.10101111cdn.com, api.vuevideo.net, app.variflight.com, api.cdmcaac.com, api.vistopia.com.cn, app.wy.guahao.com, thor.weidian.com, api.wallstcn.com, api.xiachufang.com, api.psy-1.com, portal-xunyou.qingcdn.com, api.xueqiu.com, promo.xueqiu.com, 182.92.251.113, 101.201.175.228, www.xiaohongshu.com, app.yinxiang.com, restapi.iyunmai.com, api.zhihu.com, a.qiumibao.com, *.zhuishushenqi.com, www.zybang.com, api.izuiyou.com, tiku.zhan.com, webboot.zhangyue.com, weather-data.apple.com, saad.ms.zhangyue.net
