--- a/onetest.conf
+++ b/onetest.conf
@@ -249,21 +249,160 @@ FINAL,PROXY
 localhost = 127.0.0.1
 ip6-localhost = ::1
 ip6-loopback = ::1
-taobao.com = server:223.6.6.6
-*.taobao.com = server:223.6.6.6
-tmall.com = server:223.6.6.6
-*.tmall.com = server:223.6.6.6
-jd.com = server:119.29.29.29
-*.jd.com = server:119.28.28.28
-*.qq.com = server:119.28.28.28
-*.tencent.com = server:119.28.28.28
-*.alicdn.com = server:223.5.5.5
-aliyun.com = server:223.5.5.5
-*.aliyun.com = server:223.5.5.5
-weixin.com = server:119.28.28.28
-*.weixin.com = server:119.28.28.28
-bilibili.com = server:119.29.29.29
-*.bilibili.com = server:119.29.29.29
+# 阿里
+*.alibaba.cn = server:https://dns.alidns.com/dns-query // 阿里巴巴
+*.alibaba.com.cn = server:https://dns.alidns.com/dns-query // 阿里巴巴
+*.china.alibaba.com = server:https://dns.alidns.com/dns-query // Alibaba 中国
+*.1688.com = server:https://dns.alidns.com/dns-query // 1688
+*.taobao.com = server:https://dns.alidns.com/dns-query // 淘宝
+*.tbcache.com = server:https://dns.alidns.com/dns-query // 淘宝 缓存
+*.tmall.com = server:https://dns.alidns.com/dns-query // 天猫
+*.alicdn.com = server:https://dns.alidns.com/dns-query // 阿里 CDN
+*.aliyundrive.com = server:https://dns.alidns.com/dns-query // 阿里云盘
+*.aliyun.* = server:https://dns.alidns.com/dns-query // 阿里云
+*.aliyuncdn.* = server:https://dns.alidns.com/dns-query // 阿里云 CDN
+*.aliyunddos????.com = server:https://dns.alidns.com/dns-query // 阿里云 DDoS防护
+*.aliyuncs.com = server:https://dns.alidns.com/dns-query // 阿里云API服务
+*.aliyundunwaf.com = server:https://dns.alidns.com/dns-query // 阿里云Web应用防火墙
+*.aliapp.com = server:https://dns.alidns.com/dns-query // 云引擎应用平台
+*.aliapp.org = server:https://dns.alidns.com/dns-query // 上云平台
+*.alibabausercontent.com = server:https://dns.alidns.com/dns-query // 阿里用户上传资料
+*.mmstat.com = server:https://dns.alidns.com/dns-query // mmstat 数据统计 广告追踪
+tb.cn = server:https://dns.alidns.com/dns-query // 淘宝短网址
+
+# 蚂蚁集团
+*.alipay.com = server:https://dns.alidns.com/dns-query // 支付宝
+*.alipay.com.cn = server:https://dns.alidns.com/dns-query // 支付宝
+*.alipaydns.com = server:https://dns.alidns.com/dns-query // 支付宝 HTTP DNS
+*.alipayeshop.com = server:https://dns.alidns.com/dns-query // 支付宝 商家资源
+*.alipaylog.com = server:https://dns.alidns.com/dns-query // 支付宝 Mdap
+*.alipayobjects.com = server:https://dns.alidns.com/dns-query // 支付宝 静态资源
+*.alipay-eco.com = server:https://dns.alidns.com/dns-query // 支付宝 开放技术生态体系
+
+# 腾讯
+*.tencent.com = server:https://1.12.12.12/dns-query // 腾讯
+*.qcloud.com = server:https://1.12.12.12/dns-query // 腾讯云
+*.qcloudcdn.cn = server:https://1.12.12.12/dns-query // 腾讯云CDN
+*.qcloudcdn.com = server:https://1.12.12.12/dns-query // 腾讯云CDN
+*.qcloudcos.com = server:https://1.12.12.12/dns-query // 腾讯云对象储存
+*.qcloudimg.com = server:https://1.12.12.12/dns-query // 腾讯云静态资源
+*.qcloudcjgj.com = server:https://1.12.12.12/dns-query // 腾讯云超级管家
+*.qcloudwzgj.com = server:https://1.12.12.12/dns-query // 腾讯云网站管家
+*.qcloudzygj.com = server:https://1.12.12.12/dns-query // 腾讯云主页管家
+*.myqcloud.com = server:https://1.12.12.12/dns-query // 腾讯开放云
+*.tencent-cloud.net = server:https://1.12.12.12/dns-query // 腾讯云
+*.tencentcloud-aiot.com = server:https://1.12.12.12/dns-query // 腾讯云aiot解决方案
+*.tencentcloudapi.com = server:https://1.12.12.12/dns-query // 腾讯云API
+*.tencentcloudcr.com = server:https://1.12.12.12/dns-query // 腾讯云容器镜像服务TCR
+*.tencentcloudmarket.com = server:https://1.12.12.12/dns-query // 腾讯云云市场
+*.qq.com = server:https://1.12.12.12/dns-query // QQ
+*.qlogo.cn = server:https://1.12.12.12/dns-query // 腾讯头像
+*.qpic.cn = server:https://1.12.12.12/dns-query // 腾讯图片
+*.weixin.qq.com = server:https://1.12.12.12/dns-query // 微信
+*.wx.qq.com = server:https://1.12.12.12/dns-query // 微信
+*.weixin.com = server:https://1.12.12.12/dns-query // 微信
+*.weixinbridge.com = server:https://1.12.12.12/dns-query // 微信公众平台
+*.wechat.com = server:https://1.12.12.12/dns-query // WeChat
+*.servicewechat.com = server:https://1.12.12.12/dns-query // 微信小程序
+*.weiyun.com = server:https://1.12.12.12/dns-query // 微云
+*.gtimg.cn = server:https://1.12.12.12/dns-query // 腾讯 图片 静态资源
+*.idqqimg.com = server:https://1.12.12.12/dns-query // 腾讯 图片 静态资源
+*.cdn-go.cn = server:https://1.12.12.12/dns-query // 腾讯 静态资源 CDN
+*.smtcdns.com = server:https://1.12.12.12/dns-query // 腾讯云 智能云解析DNS
+*.smtcdns.net = server:https://1.12.12.12/dns-query // 腾讯云 智能云解析DNS
+url.cn = server:https://1.12.12.12/dns-query // 腾讯短网址
+
+# 百度
+*.baidu = server:180.76.76.76 // 百度
+*.baidu.com = server:180.76.76.76 // 百度
+*.bdimg.com = server:180.76.76.76 // 百度 静态资源
+*.bdstatic.com = server:180.76.76.76 // 百度 静态资源
+*.baidupcs.* = server:180.76.76.76 // 百度网盘
+*.baiduyuncdn.* = server:180.76.76.76 // 百度云CDN
+*.baiduyundns.* = server:180.76.76.76 // 百度云DNS
+*.bdydns.* = server:180.76.76.76 // 百度云 DNS
+*.bdycdn.* = server:180.76.76.76 // 百度云 CDN
+*.bdysite.com = server:180.76.76.76 // 百度云 域名
+*.bdysites.com = server:180.76.76.76 // 百度云 域名
+*.baidubce.* = server:180.76.76.76 // 百度智能云
+*.bcedns.* = server:180.76.76.76 // 百度智能云 DNS
+*.bcebos.com = server:180.76.76.76 // 百度智能云 对象存储BOS
+*.bcevod.com = server:180.76.76.76 // 百度智能云 播放器服务
+*.bceimg.com = server:180.76.76.76 // 百度智能云 图片服务
+*.bcehost.com = server:180.76.76.76 // 百度智能云 主机
+*.bcehosts.com = server:180.76.76.76 // 百度智能云 主机
+dwz.cn = server:180.76.76.76 // 百度短网址
+
+# 360
+*.360.cn = server:https://doh.360.cn/dns-query // 360安全中心
+*.360safe.com = server:https://doh.360.cn/dns-query // 360安全卫士
+*.360kuai.com = server:https://doh.360.cn/dns-query // 360快资讯
+*.so.com = server:https://doh.360.cn/dns-query // 360搜索
+*.360webcache.com = server:https://doh.360.cn/dns-query // 360网页快照服务
+*.qihuapi.com = server:https://doh.360.cn/dns-query // 奇虎api
+*.qhimg.com = server:https://doh.360.cn/dns-query // 360图床
+*.qhimgs.com = server:https://doh.360.cn/dns-query // 360图床
+*.qhimgs?.com = server:https://doh.360.cn/dns-query // 360图床
+*.qhmsg.com = server:https://doh.360.cn/dns-query // 360
+*.qhres.com = server:https://doh.360.cn/dns-query // 奇虎静态资源
+*.qhres?.com = server:https://doh.360.cn/dns-query // 奇虎静态资源
+*.dhrest.com = server:https://doh.360.cn/dns-query // 导航静态文件
+*.qhupdate.com = server:https://doh.360.cn/dns-query // 360
+*.yunpan.cn = server:https://doh.360.cn/dns-query // 360安全云盘
+*.yunpan.com.cn = server:https://doh.360.cn/dns-query // 360安全云盘
+*.yunpan.com = server:https://doh.360.cn/dns-query // 360安全云盘
+urlqh.cn = server:https://doh.360.cn/dns-query // 360短网址
+
+# BiliBili
+*.bilibili.com = server:system // BiliBili
+*.biliapi.com = server:system // BiliBili API
+*.biliapi.net = server:system // BiliBili API
+*.bilicdn?.com = server:system // BiliBili CDN
+*.hdslb.com = server:system // BiliBili 静态资源
+*.hdslb.net = server:system // BiliBili 静态资源
+cn-hk-eq-bcache-??.bilivideo.com = server:system // BiliBili 视频服务器（unknown）
+upos-hz-mirrorakam.akamaized.net = server:system // BiliBili upos视频服务器（akamai）
+upos-sz-mirrorasiaov.bilibilivideo.com = server:system // BiliBili upos视频服务器（asia-abroad.com）
+upos-sz-mirrorali.bilivideo.com = server:https://dns.alidns.com/dns-query // BiliBili upos视频服务器（阿里云）
+upos-sz-mirrorali?.bilivideo.com = server:https://dns.alidns.com/dns-query // BiliBili upos视频服务器（阿里云）
+upos-sz-mirrorali??.bilivideo.com = server:https://dns.alidns.com/dns-query // BiliBili upos视频服务器（阿里云）
+upos-sz-mirrorbos.bilivideo.com = server:180.76.76.76 // BiliBili upos视频服务器（百度云）
+upos-sz-mirrorcos.bilivideo.com = server:https://1.12.12.12/dns-query // BiliBili upos视频服务器（腾讯云）
+upos-sz-mirrorcos?.bilivideo.com = server:https://1.12.12.12/dns-query // BiliBili upos视频服务器（腾讯云）
+upos-sz-mirrorcos??.bilivideo.com = server:https://1.12.12.12/dns-query // BiliBili upos视频服务器（腾讯云）
+upos-sz-mirrorhw.bilivideo.com = server:system // BiliBili upos视频服务器（华为云）
+upos-sz-mirrorhw?.bilivideo.com = server:system // BiliBili upos视频服务器（华为云）
+upos-sz-mirrorhwo?.bilivideo.com = server:system // BiliBili upos视频服务器（华为云）
+upos-sz-mirrorks3.bilivideo.com = server:system // BiliBili upos视频服务器（金山云）
+upos-sz-mirrorks3?.bilivideo.com = server:system // BiliBili upos视频服务器（金山云）
+upos-sz-mirrorkodo.bilivideo.com = server:system // BiliBili upos视频服务器（七牛云）
+upos-sz-mirrorkodo?.bilivideo.com = server:system // BiliBili upos视频服务器（七牛云）
+upos-sz-mirrorwcs.bilivideo.com = server:system // BiliBili upos视频服务器（网宿）
+upos-sz-mirrorwcs?.bilivideo.com = server:system // BiliBili upos视频服务器（网宿）
+upos-sz-mirrorxycdn.bilivideo.com = server:system // BiliBili upos视频服务器（迅雷）
+upos-sz-upcdnbd??.bilivideo.com = server:180.76.76.76 // BiliBili upos视频服务器（百度云）
+upos-sz-upcdnhw.bilivideo.com = server:system // BiliBili uupos视频服务器（华为云）
+upos-sz-upcdntx.bilivideo.com = server:https://1.12.12.12/dns-query // BiliBili upos视频服务器（腾讯云）
+upos-sz-upcdnws.bilivideo.com = server:system // BiliBili upos视频服务器（网宿）
+upos-tf-all-js.bilivideo.com = server:system // BiliBili upos视频服务器（unknown）
+*.mcdn.bilivideo.com = server:system // BiliBili mCDN视频服务器
+*.bilivideo.com = server:system // BiliBili 视频
+*.bilivideo.cn = server:system // BiliBili 视频
+acg.tv = server:system // BiliBili短网址
+
+# 京东
+*.jd.com = server:system // 京东
+*.360buyimg.com = server:system // 京东 静态资源
+*.jdcloud.com = server:system // 京东云
+*.jcloudstatic.com = server:system // 京东云 缓存和存储
+*.jcloudstatic.net = server:system // 京东云 静态资源
+*.jdgslb.com = server:system // 京东云 全局负载均衡
+3.cn = server:system // 京东短网址
+
+# 🇨🇳 CN
+# CNNIC SDNS
+# *.gov.cn = server:1.2.4.8 // 中国政府网
+# *.政务 = server:1.2.4.8 // 中国政府网
 hdslb.com = server:119.29.29.29
 163.com = server:119.29.29.29
 *.163.com = server:119.29.29.29
