--- a/onetest.conf
+++ b/onetest.conf
@@ -3,20 +3,21 @@ bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com, seed-sequoia.siri.apple.com, sequoia.apple.com, app.yinxiang.com, cable.auth.com, *.id.ui.direct, www.baidu.com, yunbusiness.ccb.com, wxh.wo.cn, gate.lagou.com, www.abchina.com.cn, mbank.psbc.com, ibfp.psbc.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
 # dns 最好使用国内公共 Doh 
-dns-server = system
+dns-server = https://dns.alidns.com/dns-query, https://1.12.12.12/dns-query
 ipv6 = false
 prefer-ipv6 = false
-dns-fallback-system = false
-dns-direct-system = false
+#搭配得当起到类似于 DNS 分流
+dns-fallback-system = system
+dns-direct-system = true
 icmp-auto-reply = true
 always-reject-url-rewrite = false
 private-ip-answer = true
 # direct domain fail to resolve use proxy rule
 dns-direct-fallback-proxy = true
 update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onetest.conf
+#需要自己更新GeoIP2-CN，https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
 [Rule]
-#需要自己更新GeoIP2-CN，https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/NetEaseMusic/NetEaseMusic.list,DIRECT
@@ -37,7 +38,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,DIRECT
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China_Domain.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,DIRECT
-
+RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/auto-update/ruleset/ASN.China.list,DIRECT
 DOMAIN-SUFFIX,scdn.co,PROXY
 DOMAIN-SUFFIX,line.naver.jp,PROXY
 DOMAIN-SUFFIX,line.me,PROXY
