--- a/onetest.conf
+++ b/onetest.conf
@@ -18,8 +18,8 @@ update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onete
 #需要自己更新GeoIP2-CN，https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
 [Rule]
-DOMAIN-SET,https://raw.githubusercontent.com/chideap/MyShadowrocket/main/list/small-d.list,DIRECT
-DOMAIN-SET,https://raw.githubusercontent.com/chideap/MyShadowrocket/main/list/small-p.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/chideap/MyShadowrocket/main/list/small-d.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/chideap/MyShadowrocket/main/list/small-p.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/NetEaseMusic/NetEaseMusic.list,DIRECT
