--- a/onetest.conf
+++ b/onetest.conf
@@ -20,8 +20,6 @@ update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onete
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/chideap/MyShadowrocket/main/list/small-d.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/chideap/MyShadowrocket/main/list/small-p.list,PROXY
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China_Domain.list,DIRECT
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global_Domain.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/NetEaseMusic/NetEaseMusic.list,DIRECT
@@ -41,20 +39,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TencentVideo/TencentVideo.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,DIRECT
-IP-CIDR,91.108.56.0/22,PROXY,no-resolve
-IP-CIDR,91.108.4.0/22,PROXY,no-resolve
-IP-CIDR,91.108.8.0/22,PROXY,no-resolve
-IP-CIDR,91.108.16.0/22,PROXY,no-resolve
-IP-CIDR,91.108.12.0/22,PROXY,no-resolve
-IP-CIDR,149.154.160.0/20,PROXY,no-resolve
-IP-CIDR,91.105.192.0/23,PROXY,no-resolve
-IP-CIDR,91.108.20.0/22,PROXY,no-resolve
-IP-CIDR,185.76.151.0/24,PROXY,no-resolve
-IP-CIDR,2001:b28:f23d::/48,PROXY,no-resolve
-IP-CIDR,2001:b28:f23f::/48,PROXY,no-resolve
-IP-CIDR,2001:67c:4e8::/48,PROXY,no-resolve
-IP-CIDR,2001:b28:f23c::/48,PROXY,no-resolve
-IP-CIDR,2a0a:f280::/32,PROXY,no-resolve
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China_Domain.list,DIRECT
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global_Domain.list,PROXY
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
@@ -239,6 +225,8 @@ amplifi.lan = server:system
 [Script]
 # Boxjs官方已经开始推荐模块安装方式，配置 > 模块 > 右上角加号
 # 模块地址, https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.surge.sgmodule
+Rewrite: BoxJs = type=http-request,pattern=^https?:\/\/(.+\.)?boxjs\.(com|net),script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js, requires-body=true, timeout=120
+
 #[MITM]
 #enable = true
 #hostname = %APPEND% wq.jd.com, me-api.jd.com, trade-acs.m.taobao.com, api.m.jd.com, clientaccess.10086.cn, *.bilibili.com, music.163.com, draw.jdfcloud.com, jdjoy.jd.com, ios.baertt.com, app.kxp.com, wq.jd.com, act.10010.com, m.client.10010.com, ifac*.iqiyi.com, nebula.kuaishou.com, mp.weixin.qq.com, ms.jr.jd.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, ios.prod.ftl.netflix.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, acs.m.taobao.com, m*.amap.com, api-new.app.acfun.cn, api.bjxkhc.com, *.amemv.com, *.snssdk.com, issuecdn.baidupcs.com, pan.baidu.com, newclient.map.baidu.com, mime.baidu.com, act.vip.iqiyi.com, app.bilibili.com, manga.bilibili.com, channel.beitaichufang.com, iapi.bishijie.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, cloud.189.cn, api.chelaile.net.cn, web.chelaile.net.cn, cap.caocaokeji.cn, api.caijingmobile.com, gw.csdn.net, m.ctrip.com, app.poizon.com, api.douban.com, rtbapi.douyucdn.cn, e.dangdang.com, daoyu.sdo.com, *.daydaycook.com, maicai.api.ddxq.mobi, mobile-api2011.elong.com, 123.59.31.1, 119.18.193.135, cube.elemecdn.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, api.feng.com, *-release.wuta-cam.com, www.youtube.com, s.youtube.com, gateway.shouqiev.com, dl.app.gtja.com, prom.mobile.gome.com.cn, smkmp.96225.com, api.huomao.com, imeclient.openspeech.cn, api.intsig.net, ih2.ireader.com, nnapp.cloudbae.cn:0, ib-soft.net, www.inoreader.com, img*.360buyimg.com, api.jxedt.com, richmanapi.jxedt.com, *.kakamobi.cn, app-api.jinse.com, ios.wps.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, 122.14.246.33, 175.102.178.52, api.club.lenovo.cn, api.jr.mi.com, api-mifit*.huami.com, api.mgzf.com, cdn.moji.com, img.meituan.net, p*.meituan.net, s3plus.meituan.net, flowplus.meituan.net, capi.mwee.cn, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, c.m.163.com, client.mail.163.com, interface*.music.163.com, 59.111.181.*, sp.kaola.com, support.you.163.com, p.du.163.com, app-api.niu.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, mage.if.qidian.com, msspjh.emarbox.com, api.rr.tv, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, consumer.fcbox.com, g.cdn.pengpengla.com, snailsleep.net, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, m.tuniu.com, mob.mddcloud.com, img*.10101111cdn.com, api.vuevideo.net, app.variflight.com, api.cdmcaac.com, api.vistopia.com.cn, app.wy.guahao.com, thor.weidian.com, api.wallstcn.com, api.xiachufang.com, api.psy-1.com, portal-xunyou.qingcdn.com, api.xueqiu.com, promo.xueqiu.com, 182.92.251.113, 101.201.175.228, www.xiaohongshu.com, app.yinxiang.com, restapi.iyunmai.com, api.zhihu.com, a.qiumibao.com, *.zhuishushenqi.com, www.zybang.com, api.izuiyou.com, tiku.zhan.com, webboot.zhangyue.com, weather-data.apple.com, saad.ms.zhangyue.net
